--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ defaults:
 author:
   name: "Alex Oswald"
   avatar: "/assets/images/default-profile.png"
-  bio: "Automation Engineer and .NET fanatic."
+  bio: "Software/Electrical Engineer"
   location: "Bellevue, WA"
   links:
     - label: "GitHub"
