--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,16 +6,17 @@
         {
             "label": "Development (livereload/drafts)",
             "type": "shell",
-            "command": "bundle exec jekyll serve --livereload --drafts",
+            "command": "bundle exec jekyll serve --verbose --drafts --livereload",
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "isBackground": true
         },
         {
             "label": "Production Build",
             "type": "shell",
-            "command": "bundle exec jekyll build"
+            "command": "bundle exec jekyll build --verbose"
         }
     ]
 }
