Add links to footer

--- a/_config.yml
+++ b/_config.yml
@@ -60,3 +60,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/alex-oswald"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/alex-oswald-9b207157/"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:alex@oswaldtechnologies.com"
