--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: post
       author_profile: true
   # _pages
   - scope:
