--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,9 @@ pool:
 
 steps:
 - task: UseRubyVersion@0
-  displayName: 'Use Ruby >= 2.5'
+  displayName: 'Use Ruby = 2.5'
   inputs:
-    versionSpec: '>= 2.5'
+    versionSpec: '= 2.5'
 
 - script: 'gem install jekyll bundler'
   displayName: 'Install Jekyll and bundler'
