--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin: "dark"
 search: true
 search_full_content: true
 
-disquis:
+disqus:
   shortname: aoswaldblog
 
 include: ["_pages"]
