--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/vscode/devcontainers/ruby:2.7
+FROM mcr.microsoft.com/vscode/devcontainers/ruby:3
 
 # ENV Variables required by Jekyll
 ENV LANG=en_US.UTF-8 \
@@ -8,19 +8,20 @@ ENV LANG=en_US.UTF-8 \
     LANG=en_US.UTF-8 \
     LANGUAGE=en_US
 
-    # Install jekyll
-RUN gem install bundler jekyll
-
 # [Option] Install Node.js
 ARG NODE_VERSION="lts/*"
 RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"
 
 # [Optional] Uncomment this section to install additional OS packages.
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install git
+RUN apt-get update -y && \
+    apt-get upgrade -y && \
+    export DEBIAN_FRONTEND=noninteractive && \
+    apt-get -y install git && \
+    gem update
 
 # [Optional] Uncomment this line to install additional gems.
-# RUN gem install <your-gem-names-here>
+# Install jekyll
+RUN gem install bundler jekyll
 
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
