--- a/.gitmodules
+++ b/.gitmodules
@@ -2,4 +2,5 @@
 	path = themes/hextra
 	url = https://github.com/imfing/hextra.git
 [submodule "themes/giscus"]
-	path = https://github.com/hugomods/giscus
+	path = themes/giscus
+	url = https://github.com/hugomods/giscus
