--- a/hugo.yml
+++ b/hugo.yml
@@ -32,13 +32,19 @@ menu:
       weight: 4
       url: "https://www.linkedin.com/in/alex-oswald-9b207157/"
       params:
-        icon: github
+        icon: linkedin
+
+contentDir: content/blog
 
 params:
-  blog:
+  comments:
+    enable: true
+    type: "giscus"
     giscus:
       endpoint: https://giscus.app/
       repo: "alex-oswald/blog"
       repo_id: "R_kgDOGSe--w"
       category: "Announcements"
       category_id: "DIC_kwDOGSe--84CaHp6"
+  footer:
+    displayCopyright: true
