--- a/hugo.yml
+++ b/hugo.yml
@@ -46,5 +46,7 @@ params:
       repo_id: "R_kgDOGSe--w"
       category: "Announcements"
       category_id: "DIC_kwDOGSe--84CaHp6"
+      mapping: "title"
+      strict: 1
   footer:
     displayCopyright: true
