--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,19 +4,25 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Development (livereload/drafts)",
+            "label": "Serve Drafts",
             "type": "shell",
-            "command": "bundle exec jekyll serve --drafts --livereload",
+            "command": "hugo server -D",
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            },
+            "isBackground": true,
+            "problemMatcher": []
+        },
+        {
+            "label": "Build",
+            "type": "shell",
+            "command": "hugo",
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            "isBackground": true
-        },
-        {
-            "label": "Production Build",
-            "type": "shell",
-            "command": "bundle exec jekyll build"
+            "problemMatcher": []
         }
     ]
 }
