Add managed identity ASP.NET post (#22)
* Update devcontainer

* Backup and delete jekyl

* Update for hugo

* Reshuffle

* Remove

* Add submodule

* Update pictur urls

* Update picture urls

* Update

* Remove public folder

* Add slug and aliases

* Remove author

* Fix updates

* ci: add Azure Static Web Apps workflow file
on-behalf-of: @Azure opensource@microsoft.com

* Update golang version

* Update gitignore

* Update golang version

* Update golang version

* Update output location

* Update giscus settings

* Try removing

* Disable comments on the about page

* Update readme

* Add required template overrides for comments and the main page

* Update

* Update path to try and help

* Add gitattributes

* Fix avatar image

* Update about me

* Update pic

* Deploy

* Try with underscore

* Update giscus

* Change index

* Checkout with LFS

* Remove type and fix title

* Change

* Test

* Test image

* Add tutorial on using MSAL without client secrets (#21)

--- a/hugo.yml
+++ b/hugo.yml
@@ -1,7 +1,6 @@
-
 #baseURL: 'https://alexoswald.com/'
 languageCode: 'en-us'
-title: 'Alexs Engineering Blog'
+title: "Alex's Engineering Blog"
 
 enableRobotsTXT: true
 
@@ -38,12 +37,5 @@ params:
   comments:
     enable: true
     type: "giscus"
-    giscus:
-      repo: "alex-oswald/blog"
-      repoId: "R_kgDOGSe--w"
-      category: "Announcements"
-      categoryId: "DIC_kwDOGSe--84CaHp6"
-      mapping: "title"
-      strict: 1
   footer:
     displayCopyright: true
